<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_compte"
            android:icon="@drawable/ic_menu_compte"
            android:title="@string/menu_compte" />
        <item
            android:id="@+id/nav_conduite"
            android:icon="@drawable/ic_menu_conduite"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_diagnostic"
            android:icon="@drawable/ic_menu_diagnostic"
            android:title="@string/menu_diagnostic"/>
        <item
            android:id="@+id/nav_parametres"
            android:icon="@drawable/ic_menu_parametres"
            android:title="@string/menu_parametres"/>
        <item
            android:id="@+id/nav_score_annuel"
            android:icon="@drawable/ic_menu_parametres"
            android:title="Scores"/>

</menu>
