<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_score_hebdomadaire">


    <fragment
        android:id="@+id/nav_compte"
        android:name="tn.ramzess.myapplication.ui.compte.CompteFragment"
        android:label="@string/menu_compte"
        tools:layout="@layout/fragment_compte" >
        <action
            android:id="@+id/action_nav_compte_to_nav_mainScreen"
            app:destination="@id/nav_mainScreen" />
    </fragment>

    <fragment
        android:id="@+id/nav_conduite"
        android:name="tn.ramzess.myapplication.ui.conduite.ConduiteFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_conduite" />

    <fragment
        android:id="@+id/nav_diagnostic"
        android:name="tn.ramzess.myapplication.ui.diagnostic.DiagnosticFragment"
        android:label="@string/menu_diagnostic"
        tools:layout="@layout/fragment_diagnostic" />

    <fragment
        android:id="@+id/nav_parametres"
        android:name="tn.ramzess.myapplication.ui.parametres.ParametresFragment"
        android:label="@string/menu_parametres"
        tools:layout="@layout/fragment_parametres" />

    <fragment
        android:id="@+id/nav_send"
        android:name="tn.ramzess.myapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_score_annuel"
        android:name="tn.ramzess.myapplication.ui.mainscreen.scores.ScoreAnnuelFragment"
        android:label="Score annuel"
        tools:layout="@layout/score_annuel_fragment" />

    <fragment
        android:id="@+id/nav_score_mensuel"
        android:name="tn.ramzess.myapplication.ui.mainscreen.scores.ScoreMensuelFragment"
        android:label="Score mensuel"
        tools:layout="@layout/score_mensuel_fragment" />

    <fragment
        android:id="@+id/nav_score_hebdomadaire"
        android:name="tn.ramzess.myapplication.ui.mainscreen.scores.ScoreHebdomadaireFragment"
        android:label="Score hebdomadaire"
        tools:layout="@layout/score_hebdomadare_fragment" >
        <action
            android:id="@+id/action_nav_score_hebdomadaire_to_nav_mainScreen"
            app:destination="@id/nav_mainScreen" />
    </fragment>
</navigation>