<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/buttonSignIn"
                        style="@style/MyButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_button_desabled"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/buttonRegister"
                        style="@style/MyButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_button_enabled"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/shape_edit_text_enabled"
                        android:gravity="center"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_edit_text_enabled"
                        android:gravity="center"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark" />

                    <Button
                        android:id="@+id/buttonLogin"
                        style="@style/MyButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/shape_button_enabled"
                        android:onClick="onClickBtnLogin"
                        android:text="Login" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:hint="Forgotten password" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:hint="Or" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            style="@style/MyButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_button_enabled"
                            android:text="Facebook" />

                        <Button
                            style="@style/MyButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_button_enabled"
                            android:text="Google" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_of_login_icon"
                android:src="@drawable/ald_automotive"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>